# codex-mac-worker

./: .gitignore  README.md  pyproject.toml
.duomac/: project.toml
docs/: MACBOOK_SETUP.md  MAC_MINI_SETUP.md  OPERATIONS.md  SECURITY.md
docs/operations/: scheduled-slot-smoke-runbook.md
scripts/: bootstrap_repository.sh  doctor_macos.sh  install_macbook.sh  install_macos.sh  install_skill.sh  maintenance.py  retire_legacy_worker.sh  uninstall_macos.sh  validate_skill.py
skills/dispatch-codex-task/: SKILL.md
skills/dual-mac-collaboration/: SKILL.md
src/codex_mac_worker/: __init__.py  assisted_merge.py  automatic_merge.py  cli.py  config.py  control.py  control_state.py  coordination.py  daemon.py  durable_github.py  github.py  gitops.py  merge_policy.py  policy.py  prompting.py  protocol.py  references.py  repository_onboarding.py  (+4 more)
templates/: codex-worker.config.toml  com.easewise.codex-worker-backup.plist  com.easewise.codex-worker.plist  worker.toml.example
tests/: skill_scenarios.yaml  test_assisted_merge.py  test_automatic_merge.py  test_cli.py  test_commands_cli.py  test_config_policy.py  test_contracts.py  test_control_state.py  test_daemon.py  test_dispatch_skill.py  test_durable_github.py  test_git_delivery.py  test_github.py  test_gitops.py  test_issue_commands.py  test_operational_assets.py  test_prompting_verification.py  test_protocol.py  test_references.py  test_repository_onboarding.py  test_runner.py  test_scheduled_execution.py  test_skill_content.py  test_store.py  test_worker_config.py  test_worker_discovery.py  test_worker_service.py
(+50 files in other folders)
