[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[project]
name = "dual-mac-collaboration-skill"
version = "1.0.0"
description = "Codex skill resources for GitHub Issue coordination across two Macs"
requires-python = ">=3.12"
dependencies = ["PyYAML>=6,<7"]

[project.optional-dependencies]
dev = ["pytest>=8.3,<10", "pytest-cov>=6,<8"]

[tool.setuptools]
packages = []

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
pythonpath = ["skills/dual-mac-collaboration/scripts"]
